with x.Info and more compositional guaranteed by monoid and monad use

--- a/SharpLight/SharpLight.fsproj
+++ b/SharpLight/SharpLight.fsproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <None Include="Script.fsx" />
     <Compile Include="Html.fs" />
+    <Compile Include="Reader.fs" />
     <Compile Include="SimpleDispatcher.fs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\FSharp\1.0\Microsoft.FSharp.Targets" Condition="!Exists('$(MSBuildToolsPath)\Microsoft.Build.Tasks.v4.0.dll')" />
