some comments and rearrangements

--- a/SharpLight/SharpLight.fsproj
+++ b/SharpLight/SharpLight.fsproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Script.fsx" />
+    <Compile Include="FunUtils.fs" />
     <Compile Include="Html.fs" />
     <Compile Include="Reader.fs" />
     <Compile Include="SimpleDispatcher.fs" />
