--- a/SharpLight/SharpLight.fsproj
+++ b/SharpLight/SharpLight.fsproj
@@ -55,6 +55,7 @@
     <Compile Include="Html.fs" />
     <Compile Include="Reader.fs" />
     <Compile Include="SimpleDispatcher.fs" />
+    <Compile Include="UrlPatterns.fs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\FSharp\1.0\Microsoft.FSharp.Targets" Condition="!Exists('$(MSBuildToolsPath)\Microsoft.Build.Tasks.v4.0.dll')" />
   <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft F#\v4.0\Microsoft.FSharp.Targets" Condition="Exists('$(MSBuildToolsPath)\Microsoft.Build.Tasks.v4.0.dll')" />
