--- a/SharpLight/SharpLight.fsproj
+++ b/SharpLight/SharpLight.fsproj
@@ -59,6 +59,7 @@
     <Compile Include="SimpleDispatcher.fs" />
     <Compile Include="Randexp.fsi" />
     <Compile Include="Randexp.fs" />
+    <None Include="CoolCombining.fsx" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\FSharp\1.0\Microsoft.FSharp.Targets" Condition="!Exists('$(MSBuildToolsPath)\Microsoft.Build.Tasks.v4.0.dll')" />
   <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft F#\v4.0\Microsoft.FSharp.Targets" Condition="Exists('$(MSBuildToolsPath)\Microsoft.Build.Tasks.v4.0.dll')" />
